# docs/swagger.json
@@ -18,13 +18,56 @@
     "host": "localhost:5000",
     "basePath": "/api/v1",
     "paths": {
+        "/admin/deletedImage/{id}/restore": {
+            "post": {
+                "summary": "Recover a deleted file",
+                "operationId": "HandleRecoverDeletedFile",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ImageInfoRes"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorRes"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/deletedImages": {
+            "get": {
+                "summary": "Get list of deleted files",
+                "operationId": "HandleGetDeletedFiles",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.HistoryInfoRes"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorRes"
+                        }
+                    }
+                }
+            }
+        },
         "/admin/image": {
             "put": {
                 "consumes": [
                     "multipart/form-data"
                 ],
                 "summary": "Upload an image",
-                "operationId": "UploadImage",
+                "operationId": "HandleUploadImage",
                 "parameters": [
                     {
                         "type": "file",
@@ -103,10 +146,46 @@
                 }
             }
         },
+        "/admin/image/{id}/history": {
+            "get": {
+                "description": "Get list of images information",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get list of history changes of an image",
+                "operationId": "HandleGetImageHistory",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID of image",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.HistoryInfoRes"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorRes"
+                        }
+                    }
+                }
+            }
+        },
         "/admin/image/{id}/purgeCache": {
             "post": {
                 "summary": "Clear cache of image",
-                "operationId": "image",
+                "operationId": "HandlePurgeCDNCache",
                 "parameters": [
                     {
                         "type": "integer",
@@ -360,6 +439,43 @@
                     }
                 }
             }
+        },
+        "/images/webp/{width}/{height}/{/name}": {
+            "get": {
+                "summary": "Get a webp image",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Width of image. Zero if resize scaled on its height",
+                        "name": "width",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Height of image. Zero if resize scaled on its width",
+                        "name": "height",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Image local path",
+                        "name": "/name",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {},
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorRes"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -368,6 +484,26 @@
             "properties": {
                 "err": {
                     "type": "string"
+                }
+            }
+        },
+        "models.HistoryInfoRes": {
+            "type": "object",
+            "properties": {
+                "actionType": {
+                    "type": "string"
+                },
+                "at": {
+                    "type": "string"
+                },
+                "backupFullname": {
+                    "type": "string"
+                },
+                "fullname": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
                 }
             }
         },
