# server/models/image_file.go
@@ -1,8 +1,0 @@
-package models
-
-//ImageFileReq model
-type ImageFileReq struct {
-	Width    uint   `uri:"width"`
-	Height   uint   `uri:"height"`
-	FileName string `uri:"name" binding:"required"`
-}
